  Warsaw.

- fix test runs on environments without a home directory
  (in this case we use toxinidir as the homedir)

- fix issue117: python2.5 fix: don't use ``--insecure`` option because 
  its very existence depends on presence of "ssl".  If you
  want to support python2.5/pip1.3.1 based test environments you need 
  to install ssl and/or use PIP_INSECURE=1 through ``setenv``. section.

1.6.0
-----------------

- fix issue35: add new EXPERIMENTAL "install_command" testenv-option to
  configure the installation command with options for dep/pkg install.
  Thanks Carl Meyer for the PR and docs.

- fix issue91: python2.5 support by vendoring the virtualenv-1.9.1 
  script and forcing pip<1.4. Also the default [py25] environment 
  modifies the default installer_command (new config option)
  to use pip without the "--pre" option which was introduced 
  with pip-1.4 and is now required if you want to install non-stable 
  releases.  (tox defaults to install with "--pre" everywhere).

- during installation of dependencies HOME is now set to a pseudo
  location ({envtmpdir}/pseudo-home).  If an index url was specified
  a .pydistutils.cfg file will be written with an index_url setting
  so that packages defining ``setup_requires`` dependencies will not
  silently use your HOME-directory settings or https://pypi.python.org.

- fix issue1: empty setup files are properly detected, thanks Anthon van
  der Neuth

- remove toxbootstrap.py for now because it is broken.

- fix issue109 and fix issue111: multiple "-e" options are now combined
  (previously the last one would win). Thanks Anthon van der Neut.

- add --result-json option to write out detailed per-venv information
  into a json report file to be used by upstream tools.

- add new config options ``usedevelop`` and ``skipsdist`` as well as a
  command line option ``--develop`` to install the package-under-test in develop mode.
  thanks Monty Tailor for the PR.
